<resources>
    <string name="app_name">Habit App</string>
    <string name="action_settings">Settings</string>
    <string name="action_random">Random</string>

    <string name="title_hint">Activity Name</string>
    <string name="focus_time_duration_hint">Focus Time Duration (in minutes)</string>
    <string name="action_save">Save</string>
    <string name="add_habit">Add Habit</string>
    <string name="start_time">Start Time</string>
    <string name="habit_deleted">Habit has been deleted</string>
    <string name="priority_level">Priority Level</string>
    <string name="minutes">minutes</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail_habit">ScrollingActivity</string>
    <string name="title_activity_random">Random Habit</string>

    <!-- Snackbar -->
    <string name="empty_message">Habit cannot be empty</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>

    <!-- Sort -->
    <string name="action_sort">sort</string>
    <string name="sort_start_time">By Start Time</string>
    <string name="sort_minutes_focus">By Minutes Focus</string>
    <string name="sort_title_name">By Title Name</string>

    <!-- Priority Level-->
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <!-- Count Down-->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="open_count_down">Open Count Down</string>

    <string name="searchbar_hint">Search habit</string>

    <string name="search">Search habit</string>
    <string name="no_results_message">Habit tidak ditemukan</string>
    <string name="motivasi">"Ketekunan adalah kuncinya. Setiap kebiasaan positif yang Anda tanamkan hari ini adalah investasi untuk masa depan yang lebih baik. Teruslah melangkah ke arah kebaikan, dan lihatlah betapa kebiasaan kecil dapat membawa perubahan besar dalam hidup Anda. Anda mampu mengubah hidup Anda satu kebiasaan baik pada satu waktu. Tetaplah konsisten dan jadikan setiap hari kesempatan baru untuk menjadi versi terbaik dari diri Anda."</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="portal_berita_terikini">Portal berita terikini</string>
    <string name="register">Register</string>
    <string name="username_dan_password_tidak_boleh_kosong">Username dan Password tidak boleh kosong</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="akun_tidak_terdaftar">Akun tidak terdaftar</string>
    <string name="gagal_melakukan_registrasi">Gagal melakukan registrasi</string>
    <string name="registrasi_berhasil">Registrasi berhasil</string>


    <string name="duplicate_habit_message">Habit dijam dengan durasi sudah ada, harap atur waktu yang berbeda</string>
</resources>